--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         window.onload = function () {
             document.getElementById("number5").value = number5;
             alert(warning);
-            禁止除微信浏览器之外浏览器访问
+            // 禁止除微信浏览器之外浏览器访问
             var ua = navigator.userAgent.toLowerCase();
             var isWeixin = ua.indexOf('micromessenger') != -1;
             if (!isWeixin) {
