--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <script type="text/javascript">
 
-        var warning = "本界面仅供学习使用" + "\n" + "请勿用于其他用途" + "\n" +"9月24日（星期六）已更新"+ "\n" + "出门时下方显示核酸" + "\n" + "如非该日期请修改左下五位数字";
-        var number5 = "20356";
+        var warning = "本界面仅供学习使用" + "\n" + "请勿用于其他用途" + "\n" +"9月25日（星期日）已更新"+ "\n" + "出口下方新增信息" + "\n" + "如非该日期请修改左下五位数字";
+        var number5 = "36988";
 
         var color1,color2,color3,color4 = "#ffff00";
         var color_in1 = "#bfffc8";
