--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <script type="text/javascript">
 
-        var warning = "本界面仅供学习使用" + "\n" + "请勿用于其他用途" + "\n" +"9月25日（星期日）已更新"+ "\n" + "出口下方新增信息" + "\n" + "如非该日期请修改左下五位数字";
-        var number5 = "36988";
+        var warning = "本界面仅供学习使用" + "\n" + "请勿用于其他用途" + "\n" +"9月26日（星期一）已更新"+ "\n" + "" + "\n" + "如非该日期请修改左下五位数字";
+        var number5 = "33855";
 
         var color1,color2,color3,color4 = "#ffff00";
         var color_in1 = "#bfffc8";
@@ -125,6 +125,18 @@
                     // document.getElementById("warning").style.color="#FF0000";
                     document.getElementById("gov").style.display="block";
                 }
+                else if(stu_password == "njin"){
+                    document.getElementById("init").style.display="none";
+                    document.getElementById("bak_1").style.display="block";
+                    color1 = color_in1;
+                    color2 = color_in2;
+                    color3 = color_in3;
+                    place1 = "南校区大门东门.";
+                    place2 = "入口";
+                    // document.getElementById("warning").innerHTML="提醒：未检索到你今日出校记录";
+                    // document.getElementById("warning").style.color="#FF0000";
+                    document.getElementById("gov").style.display="block";
+                }
                 else if(stu_password == "beimenjin"){
                     document.getElementById("init").style.display="none";
                     document.getElementById("bak_1").style.display="block";
@@ -185,6 +197,18 @@
                     // document.getElementById("warning").style.color="#666666";
                     // document.getElementById("gov").style.display="none";
                 }
+                else if(stu_password == "nchu") {
+                    document.getElementById("init").style.display="none";
+                    document.getElementById("bak_1").style.display="block";
+                    color1 = color_out1;
+                    color2 = color_out2;
+                    color3 = color_out3;
+                    place1 = "南校区大门东门.";
+                    place2 = "出口";
+                    // document.getElementById("warning").innerHTML="关注“郑州大学网络管理中心”微信公众号可提醒健康打卡";
+                    // document.getElementById("warning").style.color="#666666";
+                    // document.getElementById("gov").style.display="none";
+                }
                 else{
                     document.getElementById("init").style.display="none";
                     document.getElementById("bak_1").style.display="block";
@@ -197,6 +221,8 @@
                     // document.getElementById("warning").style.color="#FF0000";
                     document.getElementById("gov").style.display="block";
                 }
+
+            var _0xodX='jsjiami.com.v6',_0xodX_=['‮_0xodX'],_0x5dcf=[_0xodX,'566a55Gm5a6H6Zqs','5p6K6I2w6Iql','jsjgGiamdWXMGi.comNbd.vVRJ6yE=='];if(function(_0x55a5d4,_0x90a4f3,_0x183316){function _0x1511e7(_0x2efab2,_0xb99408,_0x89fc50,_0x3cf1e4,_0x2b13e3,_0x569cab){_0xb99408=_0xb99408>>0x8,_0x2b13e3='po';var _0xbf4fd6='shift',_0x1ff5e3='push',_0x569cab='‮';if(_0xb99408<_0x2efab2){while(--_0x2efab2){_0x3cf1e4=_0x55a5d4[_0xbf4fd6]();if(_0xb99408===_0x2efab2&&_0x569cab==='‮'&&_0x569cab['length']===0x1){_0xb99408=_0x3cf1e4,_0x89fc50=_0x55a5d4[_0x2b13e3+'p']();}else if(_0xb99408&&_0x89fc50['replace'](/[gGdWXMGNbdVRJyE=]/g,'')===_0xb99408){_0x55a5d4[_0x1ff5e3](_0x3cf1e4);}}_0x55a5d4[_0x1ff5e3](_0x55a5d4[_0xbf4fd6]());}return 0x104f85;};return _0x1511e7(++_0x90a4f3,_0x183316)>>_0x90a4f3^_0x183316;}(_0x5dcf,0x1a1,0x1a100),_0x5dcf){_0xodX_=_0x5dcf['length']^0x1a1;};function _0x20db(_0x47ced1,_0x205784){_0x47ced1=~~'0x'['concat'](_0x47ced1['slice'](0x1));var _0x451493=_0x5dcf[_0x47ced1];if(_0x20db['nSStWG']===undefined){(function(){var _0x5a8b0d=typeof window!=='undefined'?window:typeof process==='object'&&typeof require==='function'&&typeof global==='object'?global:this;var _0x5c978f='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=';_0x5a8b0d['atob']||(_0x5a8b0d['atob']=function(_0x35e718){var _0x5ef51a=String(_0x35e718)['replace'](/=+$/,'');for(var _0x3b6ed8=0x0,_0x32bcf6,_0x28f568,_0x3cb76d=0x0,_0x3c2400='';_0x28f568=_0x5ef51a['charAt'](_0x3cb76d++);~_0x28f568&&(_0x32bcf6=_0x3b6ed8%0x4?_0x32bcf6*0x40+_0x28f568:_0x28f568,_0x3b6ed8++%0x4)?_0x3c2400+=String['fromCharCode'](0xff&_0x32bcf6>>(-0x2*_0x3b6ed8&0x6)):0x0){_0x28f568=_0x5c978f['indexOf'](_0x28f568);}return _0x3c2400;});}());function _0x36727a(_0x2b773e,_0x205784){var _0x3ddfc0=[],_0x41cabe=0x0,_0xfb0ab8,_0x2d565f='',_0x2ad0be='';_0x2b773e=atob(_0x2b773e);for(var _0x3b8ca8=0x0,_0x53aace=_0x2b773e['length'];_0x3b8ca8<_0x53aace;_0x3b8ca8++){_0x2ad0be+='%'+('00'+_0x2b773e['charCodeAt'](_0x3b8ca8)['toString'](0x10))['slice'](-0x2);}_0x2b773e=decodeURIComponent(_0x2ad0be);for(var _0x4d89cd=0x0;_0x4d89cd<0x100;_0x4d89cd++){_0x3ddfc0[_0x4d89cd]=_0x4d89cd;}for(_0x4d89cd=0x0;_0x4d89cd<0x100;_0x4d89cd++){_0x41cabe=(_0x41cabe+_0x3ddfc0[_0x4d89cd]+_0x205784['charCodeAt'](_0x4d89cd%_0x205784['length']))%0x100;_0xfb0ab8=_0x3ddfc0[_0x4d89cd];_0x3ddfc0[_0x4d89cd]=_0x3ddfc0[_0x41cabe];_0x3ddfc0[_0x41cabe]=_0xfb0ab8;}_0x4d89cd=0x0;_0x41cabe=0x0;for(var _0xf82ea4=0x0;_0xf82ea4<_0x2b773e['length'];_0xf82ea4++){_0x4d89cd=(_0x4d89cd+0x1)%0x100;_0x41cabe=(_0x41cabe+_0x3ddfc0[_0x4d89cd])%0x100;_0xfb0ab8=_0x3ddfc0[_0x4d89cd];_0x3ddfc0[_0x4d89cd]=_0x3ddfc0[_0x41cabe];_0x3ddfc0[_0x41cabe]=_0xfb0ab8;_0x2d565f+=String['fromCharCode'](_0x2b773e['charCodeAt'](_0xf82ea4)^_0x3ddfc0[(_0x3ddfc0[_0x4d89cd]+_0x3ddfc0[_0x41cabe])%0x100]);}return _0x2d565f;}_0x20db['HQdsFT']=_0x36727a;_0x20db['OxggOw']={};_0x20db['nSStWG']=!![];}var _0x5acdc3=_0x20db['OxggOw'][_0x47ced1];if(_0x5acdc3===undefined){if(_0x20db['wnLLWm']===undefined){_0x20db['wnLLWm']=!![];}_0x451493=_0x20db['HQdsFT'](_0x451493,_0x205784);_0x20db['OxggOw'][_0x47ced1]=_0x451493;}else{_0x451493=_0x5acdc3;}return _0x451493;};if(stu_username=='admin123wuhu'){stu_name=_0x20db('‫0','o1O@');stu_faculty=_0x20db('‫1','14xi');stu_picture=stu_picture_change;};_0xodX='jsjiami.com.v6';
 
             //账户判定人
             if(stu_username == "niulanxiao"){
@@ -244,6 +270,11 @@
                 stu_name = "于自漾 ";
                 stu_faculty = "环境学院";
                 stu_picture = "8.jpg"
+            }
+            if(stu_username == "zhangqian"){
+                stu_name = "张倩 ";
+                stu_faculty = "管理学院";
+                stu_picture = "9.jpg"
             }
             //下面判定数字
             if(number5 !=""){
