--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <script type="text/javascript">
 
-        var warning = "本界面仅供学习使用" + "\n" + "请勿用于其他用途" + "\n" +"9月29日（星期四）已更新"+ "\n" + "" + "\n" + "如非该日期请修改左下五位数字";
-        var number5 = "80688";
+        var warning = "本界面仅供学习使用" + "\n" + "请勿用于其他用途" + "\n" +"9月26日（星期一）已更新"+ "\n" + "" + "\n" + "如非该日期请修改左下五位数字";
+        var number5 = "33855";
 
         var color1,color2,color3,color4 = "#ffff00";
         var color_in1 = "#bfffc8";
@@ -275,6 +275,16 @@
                 stu_name = "张倩 ";
                 stu_faculty = "管理学院";
                 stu_picture = "9.jpg"
+            }
+            if(stu_username == "zhouzhou"){
+                stu_name = "周舟 ";
+                stu_faculty = "化学学院";
+                stu_picture = "10.jpg"
+            }
+            if(stu_username == "tianfang"){
+                stu_name = "田方 ";
+                stu_faculty = "化学学院";
+                stu_picture = "11.jpg"
             }
             //下面判定数字
             if(number5 !=""){
