--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <script type="text/javascript">
 
-        var warning = "本界面仅供学习使用" + "\n" + "请勿用于其他用途" + "\n" +"10月1日（星期六）已更新"+ "\n" + "" + "\n" + "如非该日期请修改左下五位数字";
-        var number5 = "23084";
+        var warning = "本界面仅供学习使用" + "\n" + "请勿用于其他用途" + "\n" +"10月2日（星期天）已更新"+ "\n" + "" + "\n" + "如非该日期请修改左下五位数字";
+        var number5 = "24910";
 
         var color1,color2,color3,color4 = "#ffff00";
         var color_in1 = "#bfffc8";
