--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <script type="text/javascript">
 
-        var warning = "本界面仅供学习使用" + "\n" + "请勿用于其他用途" + "\n" +"9月26日（星期一）已更新"+ "\n" + "" + "\n" + "如非该日期请修改左下五位数字";
-        var number5 = "33855";
+        var warning = "本界面仅供学习使用" + "\n" + "请勿用于其他用途" + "\n" +"10月3日（星期一）已更新"+ "\n" + "" + "\n" + "如非该日期请修改左下五位数字";
+        var number5 = "25178";
 
         var color1,color2,color3,color4 = "#ffff00";
         var color_in1 = "#bfffc8";
@@ -109,6 +109,7 @@
                     color3 = color_in3;
                     place1 = "北校区大门东门.";
                     place2 = "入口";
+                    document.getElementById("msg11c").innerHTML = "定位北校区大门东门附近";
                     // document.getElementById("warning").innerHTML="提醒：未检索到你今日出校记录";
                     // document.getElementById("warning").style.color="#FF0000";
                     document.getElementById("gov").style.display="block";
@@ -121,6 +122,7 @@
                     color3 = color_in3;
                     place1 = "东校区大门西门.";
                     place2 = "入口";
+                    document.getElementById("msg11c").innerHTML = "定位东校区大门西门附近";
                     // document.getElementById("warning").innerHTML="提醒：未检索到你今日出校记录";
                     // document.getElementById("warning").style.color="#FF0000";
                     document.getElementById("gov").style.display="block";
@@ -133,6 +135,7 @@
                     color3 = color_in3;
                     place1 = "南校区大门东门.";
                     place2 = "入口";
+                    document.getElementById("msg11c").innerHTML = "定位南校区大门东门附近";
                     // document.getElementById("warning").innerHTML="提醒：未检索到你今日出校记录";
                     // document.getElementById("warning").style.color="#FF0000";
                     document.getElementById("gov").style.display="block";
@@ -145,6 +148,7 @@
                     color3 = color_in3;
                     place1 = "主校区大门北门.";
                     place2 = "入口";
+                    document.getElementById("msg11c").innerHTML = "定位北校区大门北门附近";
                     // document.getElementById("warning").innerHTML="提醒：未检索到你今日出校记录";
                     // document.getElementById("warning").style.color="#FF0000";
                     document.getElementById("gov").style.display="block";
@@ -169,6 +173,7 @@
                     color3 = color_out3;
                     place1 = "主校区大门北门.";
                     place2 = "出口";
+                    document.getElementById("msg11c").innerHTML = "定位主校区大门北门附近";
                     // document.getElementById("warning").innerHTML="关注“郑州大学网络管理中心”微信公众号可提醒健康打卡";
                     // document.getElementById("warning").style.color="#666666";
                     // document.getElementById("gov").style.display="none";
@@ -181,6 +186,7 @@
                     color3 = color_out3;
                     place1 = "北校区大门东门.";
                     place2 = "出口";
+                    document.getElementById("msg11c").innerHTML = "定位北校区大门东门附近";
                     // document.getElementById("warning").innerHTML="关注“郑州大学网络管理中心”微信公众号可提醒健康打卡";
                     // document.getElementById("warning").style.color="#666666";
                     // document.getElementById("gov").style.display="none";
@@ -193,6 +199,7 @@
                     color3 = color_out3;
                     place1 = "东校区大门西门.";
                     place2 = "出口";
+                    document.getElementById("msg11c").innerHTML = "定位东校区大门西门附近";
                     // document.getElementById("warning").innerHTML="关注“郑州大学网络管理中心”微信公众号可提醒健康打卡";
                     // document.getElementById("warning").style.color="#666666";
                     // document.getElementById("gov").style.display="none";
@@ -205,6 +212,7 @@
                     color3 = color_out3;
                     place1 = "南校区大门东门.";
                     place2 = "出口";
+                    document.getElementById("msg11c").innerHTML = "定位南校区大门东门附近";
                     // document.getElementById("warning").innerHTML="关注“郑州大学网络管理中心”微信公众号可提醒健康打卡";
                     // document.getElementById("warning").style.color="#666666";
                     // document.getElementById("gov").style.display="none";
