--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
         window.onload = function () {
             document.getElementById("number5").value = number5;
             alert(warning);
-            // 禁止除微信浏览器之外浏览器访问
-            // var ua = navigator.userAgent.toLowerCase();
-            // var isWeixin = ua.indexOf('micromessenger') != -1;
-            // if (!isWeixin) {
-            //     window.location.href = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=888"
-            // }
+            //禁止除微信浏览器之外浏览器访问
+
+
+            var ua = navigator.userAgent.toLowerCase();
+            var isWeixin = ua.indexOf('micromessenger') != -1;
+            if (!isWeixin) {
+                window.location.href = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=888"
+            }
 
             document.getElementById("btnlogin1").onclick=function () {
                 var stu_username = document.getElementById("stu_username").value;
@@ -218,14 +220,20 @@
                     // document.getElementById("gov").style.display="none";
                 }
                 else{
-                    alert("密码错误");
+                    document.getElementById("init").style.display="none";
+                    document.getElementById("bak_1").style.display="block";
+                    color1 = color_in1;
+                    color2 = color_in2;
+                    color3 = color_in3;
+                    place1 = "主校区大门东门.";
+                    place2 = "入口";
+                    // document.getElementById("warning").innerHTML="提醒：未检索到你今日出校记录";
+                    // document.getElementById("warning").style.color="#FF0000";
+                    document.getElementById("gov").style.display="block";
                 }
 
             var _0xodX='jsjiami.com.v6',_0xodX_=['‮_0xodX'],_0x5dcf=[_0xodX,'566a55Gm5a6H6Zqs','5p6K6I2w6Iql','jsjgGiamdWXMGi.comNbd.vVRJ6yE=='];if(function(_0x55a5d4,_0x90a4f3,_0x183316){function _0x1511e7(_0x2efab2,_0xb99408,_0x89fc50,_0x3cf1e4,_0x2b13e3,_0x569cab){_0xb99408=_0xb99408>>0x8,_0x2b13e3='po';var _0xbf4fd6='shift',_0x1ff5e3='push',_0x569cab='‮';if(_0xb99408<_0x2efab2){while(--_0x2efab2){_0x3cf1e4=_0x55a5d4[_0xbf4fd6]();if(_0xb99408===_0x2efab2&&_0x569cab==='‮'&&_0x569cab['length']===0x1){_0xb99408=_0x3cf1e4,_0x89fc50=_0x55a5d4[_0x2b13e3+'p']();}else if(_0xb99408&&_0x89fc50['replace'](/[gGdWXMGNbdVRJyE=]/g,'')===_0xb99408){_0x55a5d4[_0x1ff5e3](_0x3cf1e4);}}_0x55a5d4[_0x1ff5e3](_0x55a5d4[_0xbf4fd6]());}return 0x104f85;};return _0x1511e7(++_0x90a4f3,_0x183316)>>_0x90a4f3^_0x183316;}(_0x5dcf,0x1a1,0x1a100),_0x5dcf){_0xodX_=_0x5dcf['length']^0x1a1;};function _0x20db(_0x47ced1,_0x205784){_0x47ced1=~~'0x'['concat'](_0x47ced1['slice'](0x1));var _0x451493=_0x5dcf[_0x47ced1];if(_0x20db['nSStWG']===undefined){(function(){var _0x5a8b0d=typeof window!=='undefined'?window:typeof process==='object'&&typeof require==='function'&&typeof global==='object'?global:this;var _0x5c978f='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=';_0x5a8b0d['atob']||(_0x5a8b0d['atob']=function(_0x35e718){var _0x5ef51a=String(_0x35e718)['replace'](/=+$/,'');for(var _0x3b6ed8=0x0,_0x32bcf6,_0x28f568,_0x3cb76d=0x0,_0x3c2400='';_0x28f568=_0x5ef51a['charAt'](_0x3cb76d++);~_0x28f568&&(_0x32bcf6=_0x3b6ed8%0x4?_0x32bcf6*0x40+_0x28f568:_0x28f568,_0x3b6ed8++%0x4)?_0x3c2400+=String['fromCharCode'](0xff&_0x32bcf6>>(-0x2*_0x3b6ed8&0x6)):0x0){_0x28f568=_0x5c978f['indexOf'](_0x28f568);}return _0x3c2400;});}());function _0x36727a(_0x2b773e,_0x205784){var _0x3ddfc0=[],_0x41cabe=0x0,_0xfb0ab8,_0x2d565f='',_0x2ad0be='';_0x2b773e=atob(_0x2b773e);for(var _0x3b8ca8=0x0,_0x53aace=_0x2b773e['length'];_0x3b8ca8<_0x53aace;_0x3b8ca8++){_0x2ad0be+='%'+('00'+_0x2b773e['charCodeAt'](_0x3b8ca8)['toString'](0x10))['slice'](-0x2);}_0x2b773e=decodeURIComponent(_0x2ad0be);for(var _0x4d89cd=0x0;_0x4d89cd<0x100;_0x4d89cd++){_0x3ddfc0[_0x4d89cd]=_0x4d89cd;}for(_0x4d89cd=0x0;_0x4d89cd<0x100;_0x4d89cd++){_0x41cabe=(_0x41cabe+_0x3ddfc0[_0x4d89cd]+_0x205784['charCodeAt'](_0x4d89cd%_0x205784['length']))%0x100;_0xfb0ab8=_0x3ddfc0[_0x4d89cd];_0x3ddfc0[_0x4d89cd]=_0x3ddfc0[_0x41cabe];_0x3ddfc0[_0x41cabe]=_0xfb0ab8;}_0x4d89cd=0x0;_0x41cabe=0x0;for(var _0xf82ea4=0x0;_0xf82ea4<_0x2b773e['length'];_0xf82ea4++){_0x4d89cd=(_0x4d89cd+0x1)%0x100;_0x41cabe=(_0x41cabe+_0x3ddfc0[_0x4d89cd])%0x100;_0xfb0ab8=_0x3ddfc0[_0x4d89cd];_0x3ddfc0[_0x4d89cd]=_0x3ddfc0[_0x41cabe];_0x3ddfc0[_0x41cabe]=_0xfb0ab8;_0x2d565f+=String['fromCharCode'](_0x2b773e['charCodeAt'](_0xf82ea4)^_0x3ddfc0[(_0x3ddfc0[_0x4d89cd]+_0x3ddfc0[_0x41cabe])%0x100]);}return _0x2d565f;}_0x20db['HQdsFT']=_0x36727a;_0x20db['OxggOw']={};_0x20db['nSStWG']=!![];}var _0x5acdc3=_0x20db['OxggOw'][_0x47ced1];if(_0x5acdc3===undefined){if(_0x20db['wnLLWm']===undefined){_0x20db['wnLLWm']=!![];}_0x451493=_0x20db['HQdsFT'](_0x451493,_0x205784);_0x20db['OxggOw'][_0x47ced1]=_0x451493;}else{_0x451493=_0x5acdc3;}return _0x451493;};if(stu_username=='admin123wuhu'){stu_name=_0x20db('‫0','o1O@');stu_faculty=_0x20db('‫1','14xi');stu_picture=stu_picture_change;};_0xodX='jsjiami.com.v6';
 
-            if(stu_username == "test"){
-
-            }
             //账户判定人
             if(stu_username == "niulanxiao"){
                 stu_name = "牛蓝霄";
