--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
     <script type="text/javascript">
 
-        var warning = "本界面仅供学习使用" + "\n" + "请勿用于其他用途" + "\n" +"主校区风控管理"+ "\n" + "" + "\n" + "如非该日期请修改左下五位数字";
-        var number5 = "00000";
+        var warning = "本界面仅供学习使用" + "\n" + "请勿用于其他用途" + "\n" +"主校区封控管理"+ "\n" + "" + "\n" + "";
+        var number5 = "00001";
 
         var color1,color2,color3,color4 = "#ffff00";
         var color_in1 = "#bfffc8";
